crates/plotnik-lib/tests/04-emit/anchors/strict_first_child_impossible.txt
Q = (function_declaration .! (identifier))
==== diagnostics ====
error: pattern can never match
 --> query.ptk:1:6
  |
1 | Q = (function_declaration .! (identifier))
  |      ^^^^^^^^^^^^^^^^^^^^
